--- a/expense-tracker-frontend/src/components/styles/Transactions.css
+++ b/expense-tracker-frontend/src/components/styles/Transactions.css
@@ -8,7 +8,7 @@
   border-radius: 12px;
   box-shadow: 0 4px 25px rgba(0, 0, 0, 0.1);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  overflow-x: auto;
+  overflow-x: none;
 }
 
 .transaction-container h2 {
@@ -108,7 +108,7 @@
   .transaction-table {
     display: block;
     width: 100%;
-    overflow-x: auto;
+    overflow-x: none;
   }
 
   .transaction-table th,
